# File36

./: .gitignore  README.md  cli.py  config.py  main.py  pyproject.toml  requirements.txt  sample  sender.py
.github/workflows/: python-publish.yml
core/: enums.py
src/file36/: cli.py  config.py
src/file36/core/: enums.py  player.py  sender.py  types.py
test_data/: sample
utils/: sender.py
