[build-system]
requires = ["setuptools>=80", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "file36"
dynamic = ["version"]
authors = [
  { name="NIHILNE", email="chris@nihilne.com" },
]
description = "A file-transfer-over-audio utility, aka a slow modem."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "sounddevice",
    "matplotlib",
    "PyQt5"
]

[project.scripts]
file36 = "file36.cli:main"

[project.urls]
Homepage = "https://github.com/nihilne/File36"
Issues = "https://github.com/nihilne/File36/issues"


[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"